add powerctl API client and client pkg
